--- a/Application/templates/index.html
+++ b/Application/templates/index.html
@@ -3,7 +3,9 @@
     <meta charset="utf-8">
     <!-- Semantic UI React CSS -->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
-
+    <link rel="stylesheet" href="static/css/NavBar.css">
+    <link rel="stylesheet" href="static/css/Footer.css">
+    <link rel="stylesheet" href="static/css/style.css">
   </head>
   <body>
     <div id="content" />
